# betterbib

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  LICENSE.txt  Makefile  README.md  betterbib  bibtex-mathscinet  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  test.yml
betterbib/: __about__.py  __init__.py  adapt_doi_urls.py  bibtex.py  checker.py  connector.py  crossref.py  dblp.py  dictdiffer.py  errors.py  journal_abbrev.py  mathscinet.py  progress_bar.py  source.py  sync.py  tools.py  zb_mref.py
betterbib/cli/: __init__.py  dedup_doi.py  doi2bibtex.py  format.py  full.py  journal_abbrev.py  sync.py
betterbib/data/: README.md  csv-to-json.py  journals.json  update.py
src/betterbib/: __about__.py  __init__.py  adapt_doi_urls.py  crossref.py  dblp.py  errors.py  journal_abbrev.py  sync.py  tools.py  warnings.py
src/betterbib/cli/: __init__.py  _doi_to_bibtex.py  _format.py  _journal_abbrev.py  _main.py  _update.py  dedup_doi.py  default_parser.py  doi2bibtex.py  format.py  full.py  helpers.py  journal_abbrev.py  sync.py
src/betterbib/data/: README.md  csv-to-json.py  journals.json
test/: test.py  test_bibtex_title.py  test_cli.py  test_crossref.py  test_dblp.py  test_journal_abbrev.py  test_tools.py
tests/: test_bibtex_title.py  test_cli.py  test_crossref.py  test_journal_abbrev.py  test_to_string.py  test_tools.py
tests/cli/: test_dedup_doi_cli.py  test_doi_to_bibtex_cli.py  test_format.py  test_format_cli.py  test_journal_abbrev.py  test_journal_abbrev_cli.py  test_update_cli.py
tools/: betterbib  betterbib-dedup-doi  betterbib-doi2bibtex  betterbib-format  betterbib-journal-abbrev  betterbib-sync  bibitems2bibtex  bibitems2bibtex.py  create_json  doi2bibtex  test-source  test-source.py
