[metadata]
name = betterbib
version = 3.5.8
author = Nico Schlömer
email = nico.schloemer@gmail.com
description = Better BibTeX data
url = https://github.com/nschloe/betterbib
project_urls =
    Code=https://github.com/nschloe/betterbib
    Issues=https://github.com/nschloe/betterbib/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_files = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
install_requires =
    appdirs
    importlib_metadata;python_version<"3.8"
    latexcodec
    pybtex >= 0.19.0
    pyenchant
    requests
    requests_cache
    tqdm
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel

[options.entry_points]
console_scripts =
    betterbib = betterbib.cli.full:main
    betterbib-dedup-doi = betterbib.cli.dedup_doi:main
    betterbib-doi2bibtex = betterbib.cli.doi2bibtex:main
    betterbib-format = betterbib.cli.format:main
    betterbib-journal-abbrev = betterbib.cli.journal_abbrev:main
    betterbib-sync = betterbib.cli.sync:main

[options.package_data]
* =
    data/journals.json
