[metadata]
name = betterbib
version = 4.0.1
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Better BibTeX data
url = https://github.com/nschloe/betterbib
project_urls =
    Code=https://github.com/nschloe/betterbib
    Issues=https://github.com/nschloe/betterbib/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    latex
    bibtex

[options]
package_dir =
    =src
packages = find:
install_requires =
    appdirs
    importlib_metadata;python_version<"3.8"
    latexcodec
    pybtex >= 0.19.0
    pyenchant
    requests
    requests_cache
    rich
    unidecode
python_requires = >=3.7

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    betterbib = betterbib.cli:main

[options.package_data]
* =
    data/journals.json
